<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.7</version>
        <relativePath/>
    </parent>

    <groupId>com.project</groupId>
    <artifactId>oditji</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>war</packaging>

    <name>oditji</name>
    <description/>
    <url/>

    <licenses>
        <license/>
    </licenses>

    <developers>
        <developer/>
    </developers>

    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>

    <properties>
        <java.version>21</java.version>

        <!-- 테스트 커버리지 측정용 JaCoCo 안정 버전 -->
        <jacoco.version>0.8.15</jacoco.version>

        <!-- Firebase Custom Token과 Firestore 서버 동기화에 사용합니다. -->
        <firebase-admin.version>9.10.0</firebase-admin.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>com.oracle.database.jdbc</groupId>
            <artifactId>ojdbc11</artifactId>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-oauth2-client</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.tomcat.embed</groupId>
            <artifactId>tomcat-embed-jasper</artifactId>
        </dependency>

        <!-- JUnit 등 JDBC 테스트 지원 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-jdbc-test</artifactId>
            <scope>test</scope>
            <!-- JDBC 테스트 스타터가 가져오는 구형 android-json도 제외합니다. -->
            <exclusions>
                <exclusion>
                    <groupId>com.vaadin.external.google</groupId>
                    <artifactId>android-json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <!-- JUnit, Mockito, MockMvc 등 MVC 테스트 지원 -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webmvc-test</artifactId>
            <scope>test</scope>
            <!-- org.json 중복 로딩을 막아 테스트 런타임 구현체를 하나로 통일합니다. -->
            <exclusions>
                <exclusion>
                    <groupId>com.vaadin.external.google</groupId>
                    <artifactId>android-json</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>4.0.1</version>
        </dependency>

        <dependency>
            <groupId>jakarta.servlet.jsp.jstl</groupId>
            <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
        </dependency>

        <dependency>
            <groupId>org.glassfish.web</groupId>
            <artifactId>jakarta.servlet.jsp.jstl</artifactId>
        </dependency>

        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20240303</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.16.1</version>
        </dependency>

        <dependency>
            <groupId>net.coobird</groupId>
            <artifactId>thumbnailator</artifactId>
            <version>0.4.17</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>

        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjrt</artifactId>
            <version>1.9.22</version>
        </dependency>

        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>1.9.22</version>
        </dependency>

        <!--
            ODITJI 세션 로그인 사용자를 Firebase Authentication의
            Custom Token으로 연결하고 Firestore 권한 문서를 서버에서 관리합니다.
        -->
        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>${firebase-admin.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>

            <!--
                테스트 실행 전에 JaCoCo Agent를 연결하고,
                verify 단계에서 XML/HTML 커버리지 보고서를 생성합니다.
            -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>

                <executions>

                    <execution>
                        <id>jacoco-prepare-agent</id>

                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>

                    <execution>
                        <id>jacoco-report</id>
                        <phase>verify</phase>

                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>

                </executions>
            </plugin>

            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>4.0.0.4121</version>
            </plugin>

        </plugins>
    </build>

    <!-- SonarQube 서버 연결 및 프로젝트 기본 설정 -->
    <profiles>

        <profile>
            <id>sonar</id>

            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <properties>

                <!-- SonarQube 서버 주소 -->
                <sonar.host.url>http://localhost:9000</sonar.host.url>

                <!-- SonarQube 프로젝트 정보 -->
                <sonar.projectKey>oditji-platform</sonar.projectKey>
                <sonar.projectName>ODITJI</sonar.projectName>

                <!-- 인코딩 및 분석 제외 파일 -->
                <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
                <sonar.exclusions>**/test/**, **/Q*.java</sonar.exclusions>

                <!--
                    VO의 getter/setter와 JSP 화면 마크업은 구조상 반복이 발생하므로
                    중복 코드(CPD) 계산에서만 제외합니다.
                    Security, Reliability, Maintainability 분석 대상에서는 유지됩니다.
                -->
                <sonar.cpd.exclusions>
                    **/vo/**/*.java,
                    **/WEB-INF/views/**/*.jsp
                </sonar.cpd.exclusions>

                <!-- JaCoCo XML 커버리지 보고서 경로 -->
                <sonar.coverage.jacoco.xmlReportPaths>
                    ${project.build.directory}/site/jacoco/jacoco.xml
                </sonar.coverage.jacoco.xmlReportPaths>

            </properties>
        </profile>

    </profiles>

</project>